--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/stantaylor/speedtest#readme",
   "devDependencies": {
+    "moment": "^2.10.6",
     "speedtest-net": "^1.1.0"
   }
 }
