--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/stantaylor/speedtest#readme",
   "devDependencies": {
     "moment": "^2.10.6",
+    "mysql": "^2.9.0",
     "speedtest-net": "^1.1.0"
   }
 }
